{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MainActionMap",
            "id": "7a8d0c09-491e-4674-97de-a05e0bfbfa70",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "b132815f-fe6d-414b-b4cd-64311b410b77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "7c230d44-2763-4d69-b399-4b29b184051c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "edc8633e-b623-491f-b1b8-02774508ab06",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "972c12c9-fe15-49e4-a503-a6f5909beecb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}